[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/inventory_ui.gd" id="1_inventory"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InventoryUI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="ItemInfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 100.0
offset_right = 600.0
offset_bottom = 300.0

[node name="ItemName" type="Label" parent="ItemInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="ItemInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 40.0
offset_right = -8.0
offset_bottom = 150.0
grow_horizontal = 2
autowrap_mode = 2

[node name="UseButton" type="Button" parent="ItemInfoPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Use" 